--- a/css/common.css
+++ b/css/common.css
@@ -9,17 +9,14 @@
   background: #111;
   width: 100%;
   height: auto;
-  text-transform: lowercase;
-  font-family: "Lato";
-  font-weight: 100;
 }
-/* line 15, ../sass/_nav.scss */
+/* line 11, ../sass/_nav.scss */
 #nav ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
 }
-/* line 20, ../sass/_nav.scss */
+/* line 15, ../sass/_nav.scss */
 #nav ul li {
   position: relative;
   display: block;
@@ -27,9 +24,8 @@
   width: 100%;
   height: 1.1em;
   line-height: 1.1em;
-  font-size: 1.1em;
 }
-/* line 29, ../sass/_nav.scss */
+/* line 23, ../sass/_nav.scss */
 #nav ul li span {
   position: absolute;
   top: 0;
@@ -40,31 +36,31 @@
   opacity: 0.5;
   transition: all 0.3s ease;
 }
-/* line 41, ../sass/_nav.scss */
+/* line 35, ../sass/_nav.scss */
 #nav ul li #homeLink span {
   background: #00D9FF;
   opacity: 0.4;
 }
-/* line 45, ../sass/_nav.scss */
+/* line 39, ../sass/_nav.scss */
 #nav ul li #artistLink span {
   background: #FF9600;
   opacity: 0.4;
 }
-/* line 49, ../sass/_nav.scss */
+/* line 43, ../sass/_nav.scss */
 #nav ul li #missionLink span {
   background: #00FF26;
   opacity: 0.4;
 }
-/* line 53, ../sass/_nav.scss */
+/* line 47, ../sass/_nav.scss */
 #nav ul li #contactLink span {
   background: #FC449A;
   opacity: 0.4;
 }
-/* line 58, ../sass/_nav.scss */
+/* line 52, ../sass/_nav.scss */
 #nav ul li:hover span {
   width: 100%;
 }
-/* line 62, ../sass/_nav.scss */
+/* line 56, ../sass/_nav.scss */
 #nav ul li a:link, #nav ul li a:visited {
   color: #fff;
   text-decoration: none;
@@ -74,53 +70,65 @@
 body {
   font-family: "Lato", "Helvetica Neue", Helvetica, sans-serif;
   font-weight: 100;
+  font-size: 1em;
 }
 
-/* line 6, ../sass/_typography.scss */
+/* line 7, ../sass/_typography.scss */
 h1, h2, h3, h4 {
   font-weight: 300;
 }
 
-/* line 10, ../sass/_typography.scss */
+/* line 11, ../sass/_typography.scss */
 h2 {
   font-size: 2.4em;
 }
 
 /* line 15, ../sass/_typography.scss */
+#nav {
+  text-transform: lowercase;
+  font-family: "Lato";
+  font-weight: 100;
+}
+/* line 19, ../sass/_typography.scss */
+#nav li {
+  font-size: 1.1em;
+}
+
+/* line 25, ../sass/_typography.scss */
 #home h1 {
   font-size: 3em;
 }
-/* line 17, ../sass/_typography.scss */
+/* line 27, ../sass/_typography.scss */
 #home h1 .bold {
   color: #00D9FF;
   opacity: 0.4;
 }
 
-/* line 24, ../sass/_typography.scss */
+/* line 34, ../sass/_typography.scss */
 .page h2, .home h1 {
   text-align: right;
   text-transform: lowercase;
 }
-/* line 27, ../sass/_typography.scss */
+/* line 37, ../sass/_typography.scss */
 .page h2 .bold, .home h1 .bold {
   font-family: "Lato";
   font-weight: 700;
   font-size: 1.3em;
 }
 
-/* line 36, ../sass/_typography.scss */
+/* line 46, ../sass/_typography.scss */
 .release .tracks span {
   float: right;
   font-family: "Lato";
   font-weight: 300;
 }
 
-/* line 44, ../sass/_typography.scss */
+/* line 54, ../sass/_typography.scss */
 #footer {
   text-align: right;
   text-transform: lowercase;
 }
-/* line 49, ../sass/_typography.scss */
+/* line 59, ../sass/_typography.scss */
 #footer ul li a:link, #footer ul li a:visited {
   color: #fff;
   text-decoration: none;
@@ -198,77 +206,65 @@ body {
 }
 /* line 72, ../sass/common.scss */
 #artists .bio, #artists .release {
-  padding-left: 10px;
+  margin: 0 0 1em 1em;
 }
 /* line 75, ../sass/common.scss */
 #artists .release {
   float: left;
   position: relative;
-  width: 340px;
-  max-width: 340px;
+  width: 100%;
   height: 350px;
-  background: #DDD;
-  margin: 10px;
 }
-/* line 89, ../sass/common.scss */
-#artists .release .tracks {
-  float: left;
-  position: relative;
-  top: 0;
-  left: 0;
-  overflow: scroll;
-  margin: 0;
-  padding-left: 25px;
-}
-/* line 98, ../sass/common.scss */
+/* line 81, ../sass/common.scss */
 #artists .release img {
   float: left;
-  position: absolute;
-  top: 0;
-  left: 0;
   margin: 0;
   padding: 0;
-  width: 350px;
+  width: 30%;
   height: auto;
-  opacity: 0.2;
+}
+/* line 91, ../sass/common.scss */
+#artists .release .releaseInfo {
+  float: left;
+  width: 40%;
+  padding-left: 2em;
+}
+/* line 96, ../sass/common.scss */
+#artists .release .tracks {
+  margin: 0;
+  padding-left: 3em;
 }
 
-/* line 112, ../sass/common.scss */
+/* line 103, ../sass/common.scss */
 #mission {
-  clear: left;
+  clear: both;
 }
 
-/* line 116, ../sass/common.scss */
+/* line 107, ../sass/common.scss */
 #footer {
   background: url(../img/navy_blue.png) repeat top left fixed;
   margin: 0;
   padding: 0;
   padding-right: 110px;
 }
-/* line 121, ../sass/common.scss */
+/* line 112, ../sass/common.scss */
 #footer ul {
   list-style-type: none;
 }
-/* line 123, ../sass/common.scss */
+/* line 114, ../sass/common.scss */
 #footer ul li {
   display: inline-block;
   padding-left: 0.7em;
 }
-/* line 128, ../sass/common.scss */
+/* line 119, ../sass/common.scss */
 #footer p {
   margin: 0;
   padding: 0;
 }
 
-@media all and (max-width: 500px) {
-  /* line 135, ../sass/common.scss */
-  #artists .release {
-    width: 300px;
-    max-width: 300px;
-    height: 310px;
-  }
-  /* line 139, ../sass/common.scss */
-  #artists .release img {
-    width: 100%;
+@media all and (max-device-width: 480px) {
+  /* line 128, ../sass/common.scss */
+  body {
+    font-size: 3em;
   }
 }
