--- a/sass/common.scss
+++ b/sass/common.scss
@@ -70,47 +70,38 @@ body {
 		left: 10%;
 	}
 	.bio, .release {
-		padding-left: 10px;
+		margin: 0 0 1em 1em;
 	}
 	.release {
 		float: left;
 		// display: inline-block;
 		position: relative;
-		width: 340px;
-		max-width: 340px;
+		width: 100%;
 		height: 350px;
-		// height: 90%;
-		// max-height: 350px;
-		// height: 350px;
-		// overflow: hidden;
-		// min-width: 340px;
-		background: #DDD;
-		margin: 10px;
-		.tracks {
-			float: left;
-			position: relative;
-			top: 0;
-			left: 0;
-			overflow: scroll;
-			margin: 0;
-			padding-left: 25px;
-		}
 		img {
 			float: left;
-			position: absolute;
-			top: 0;
-			left: 0;
+			// position: absolute;
+			// top: 0;
+			// left: 0;
 			margin: 0;
 			padding: 0;
-			width: 350px;
+			width: 30%;
 			height: auto;
-			opacity: 0.2;
+		}
+		.releaseInfo {
+			float: left;
+			width: 40%;
+			padding-left: 2em;
+		}
+		.tracks {
+			margin: 0;
+			padding-left: 3em;
 		}
 	}
 }
 
 #mission {
-	clear: left;
+	clear: both;
 }
 
 #footer {
@@ -131,13 +122,18 @@ body {
 	}
 }
 
-@media all and (max-width: 500px) {
-	#artists .release {
-		width: 300px;
-		max-width: 300px;
-		height: 310px;
-		img {
-			width: 100%;
-		}
+@media all and (max-device-width: 480px) {
+
+	// LOAD HIGHER RES BG PNG
+	body {
+		font-size: 3em;
 	}
+	// #artists .release {
+	// 	width: 300px;
+	// 	max-width: 300px;
+	// 	height: 310px;
+	// 	img {
+	// 		width: 100%;
+	// 	}
+	// }
 }
