--- a/sass/common.scss
+++ b/sass/common.scss
@@ -68,21 +68,23 @@ body {
 		float: left;
 		position: relative;
 		left: 10%;
+		// overflow-x: scroll;
 	}
 	.bio, .release {
 		margin: 0 0 1em 1em;
 	}
+	.releases {
+		overflow-x: scroll;
+	}
 	.release {
 		float: left;
-		// display: inline-block;
 		position: relative;
 		width: 100%;
+		min-width: 900px;
 		height: 350px;
+		overflow: auto;
 		img {
 			float: left;
-			// position: absolute;
-			// top: 0;
-			// left: 0;
 			margin: 0;
 			padding: 0;
 			width: 30%;
@@ -90,12 +92,15 @@ body {
 		}
 		.releaseInfo {
 			float: left;
-			width: 40%;
+			// width: auto;
+			// min-width: 50%;
 			padding-left: 2em;
+			position: relative;
 		}
 		.tracks {
 			margin: 0;
 			padding-left: 3em;
+			width: 100%;
 			li {
 				margin-bottom: 2px;
 			}
@@ -126,8 +131,7 @@ body {
 #footer {
 	background: $bgImage repeat top left fixed;
 	margin: 0;
-	padding: 0;
-	padding-right: 110px;
+	padding: 0 10% 0 0;
 	ul {
 		list-style-type: none;
 		li {
